--- a/portfolioapp/templates/portfolioapp/home.html
+++ b/portfolioapp/templates/portfolioapp/home.html
@@ -1,24 +1,48 @@
+{% extends 'portfolioapp/base.html' %}
 {% load static %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Home Page</title>
 </head>
 <body>
-<img src="{% static 'portfolioapp/Profile.jpg' %}" width="500" height="600">
-<a href="{% static 'portfolioapp/Saikiran_Resume.pdf' %}">My Resume</a>
+<!--<img src="{% static 'portfolioapp/Profile.jpg' %}" width="500" height="600">-->
 <br>
-{% for blog in All_Blogs %}
-    <a href="{% url 'blogs:detail_blog' blog.id %}"><h1>{{ blog.blog_title }}</h1></a>
-    <p>{{ blog.blog_description }}</p>
-    - <i>{{ blog.blog_author }}</i>
-    <br>
-    <u>{{ blog.blog_date }}</u>
-    <br>
-    <img src="{{ blog.blog_image.url }}" height="100" width="100">
-    {% if blog.blog_url %}
-    <a href="{{ blog.blog_url }}">Link</a>
-{% endif %}
-{% endfor %}
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="{% static 'portfolioapp/scroll1.jpg' %}" alt="Third slide" width="300">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'portfolioapp/scroll2.jpg' %}" alt="Third slide" width="50">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="{% static 'portfolioapp/scroll3.png' %}" alt="Third slide" width="50">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<h4>Responsive behaviors</h4>
+<p>
+  Navbars can utilize .navbar-toggler, .navbar-collapse, and .navbar-expand{-sm|-md|-lg|-xl} classes to change when their content collapses behind a button. In combination with other utilities, you can easily choose when to show or hide particular elements.
+
+  For navbars that never collapse, add the .navbar-expand class on the navbar. For navbars that always collapse, don’t add any .navbar-expand class.</p>
+<p>
+  "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?"
+</p>
 </body>
 </html>
+{% endblock %}
