--- a/blogapp/templates/blogapp/blog_detail.html
+++ b/blogapp/templates/blogapp/blog_detail.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+{% extends 'portfolioapp/base.html' %}
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,3 +9,4 @@
 {{ blog.blog_description }}
 </body>
 </html>
+{% endblock %}
