create blog code added , user blogs views need to be modified

--- a/blogapp/templates/blogapp/blog_detail.html
+++ b/blogapp/templates/blogapp/blog_detail.html
@@ -6,6 +6,8 @@
     <title>Detail Blogs</title>
 </head>
 <body>
+<img class="card-img-top" src="{{ blog.blog_image.url }}" alt="Card image cap">
+
 {{ blog.blog_description }}
 </body>
 </html>
