--- a/portfolioapp/templates/portfolioapp/base.html
+++ b/portfolioapp/templates/portfolioapp/base.html
@@ -30,12 +30,12 @@
             <li class="nav-item active">
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Create Blog</a>
+                <a href="{% url 'write_blog' %}" class="nav-link">Create Blog</a>
             </li>
             <li class="nav-item">
                 <!--        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>-->
-                <a href="{% url 'blogs:home' %}" class="nav-link" tabindex="-1"><span
-                        class="badge badge-light">My Blogs</span>
+                <a href="{% url 'user_blogs' %}" class="nav-link" tabindex="-1"><span
+                        class="badge badge-light">{{ All_Blogs.count }}blog{{ All_Blogs.count|pluralize }}</span>
                 </a>
 
             </li>
@@ -67,10 +67,6 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
             {% if user.is_authenticated %}
-            <!--            <ul>-->
-            <!--                <li>Hello, {{ user }} &nbsp;</li>-->
-            <!--                <li><a class="btn btn-outline-success my-2 my-sm-0 mr-sm-2" href="{% url 'logout' %}">Logout</a></li>-->
-            <!--            </ul>-->
             <div class="dropdown mr-1">
                 <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuOffset"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
