inserted the update blogs code

--- a/blogapp/templates/blogapp/blog_detail.html
+++ b/blogapp/templates/blogapp/blog_detail.html
@@ -7,8 +7,17 @@
 </head>
 <body>
 <img class="card-img-top" src="{{ blog.blog_image.url }}" alt="Card image cap">
-
-{{ blog.blog_description }}
+<center>
+    <h1>{{ blog.blog_title }}</h1>
+    <p>{{ blog.blog_description|safe }}</p>
+    <span>Author : <b><i> {{ blog.blog_profile_name }}</i></b></span>
+    <br>
+    <p class="card-text"><small class="text-muted">Last Updated On {{ blog.blog_date|date:'F jS Y'|lower }}</small></p>
+    {% if user.is_authenticated %}
+    <a href="{% url 'blogs:edit_blog' blog.id %}" class="btn btn-primary btn-lg active" role="button"
+       aria-pressed="true">Edit Blog</a>
+    {% endif %}
+</center>
 </body>
 </html>
 {% endblock %}
